=== Directory ===
Authors: Author: Ivan Shaovchev, Andrey Shipilov (Incsub)   
Plugin Page: http://premium.wpmudev.org/project/wordpress-directory

 
== Changelog ==

= 2.1.2 =
* Various fixes for version 3.4
* Added Excerpt field to front end Listing edit
* Redesigned generic archive template page-listings.php to display better in standard themes.


= 2.1.1.5 =
* Fixed double load of css script.
* Remove no longer used tabs script

= 2.1.1.4 =
* Fixed template parts loading order so shortcodes would work in Listings.
* Changed priorities on the_content filter to allow embeds to work with custom fields.

= 2.1.1.3 =
* Fixed unclosed <div>
* CustomPress 1.2.2.3

= 2.1.1.2 =
* Update customPress
* Changed enqueue order

= 2.1.1.1 =
* Typo preventing display of customfields on single listing page.

= 2.1.1 =
* Better filter for taxonomy supports list in functions
* Moved security redirects to parse_query to avoid header sent error.

= 2.1 =
* Widget area replaces Advertising area in theme
* Fully integrated customPress
* Custom fields foreach error when no custom fields defined.
* Many new shortcodes
* Many new automatically added Directory management pages
* Full blown front end editor for Listings
* Feature image support
* Lots of bug fixes.


= 2.0.5 =
* Fixed problem of display pages "My Listings", "Add Listing", "Edit Listing" for some permalinks structures;  

= 2.0.4 =
* Added My Listings page;
* Added Add Listing page;
* Added Edit Listing page;
* Added "directory_listing" post type to CustomPress plugin;
* Fixed compatibility problems with the Infinite SEO plugin on "Signin" and "Signup" pages;
* Fixed problem with user roles on subsites;
* Fixed pages "Signin" and "Signup" on subsites;
* Fixed capabilities of users on subsites;
* Fixed some translation for texts;
* Display custom fields on Listing page;
* Deleted edit post button on Directory pages;

= 2.0.3 =
* fixed problem with short php tags;