@@ -1,5 +1,4 @@
 <?php
-
 while ( have_posts() ) : the_post(); ?>
 
 <div class="excerptpost" id="post-<?php the_ID(); ?>">
